ตรง profile มีปัญหานิดหน่อย เลยทำให้แล้ว
