# backend/services/chat/handler.go
@@ -22,7 +22,7 @@ func NewHandler(s Service) *Handler {
 // @Description if message is not null, the endpoint will send message, otherwise create new chatroom(if not exist)
 // @Tags chat
 // @Param SendMessageReq body SendMessageRequest true "id to person who will receive message and text"
-// @Param Authorization header string false "Send token if log-in, to check authority to send message" default(Bearer <Add access token here>)
+// @Param Authorization header string true "Send token if log-in, to check authority to send message" default(Bearer <Add access token here>)
 // @ID SendMessageHandler
 // @Accept  json
 // @Produce  json
@@ -62,7 +62,7 @@ func (h *Handler) SendMessageHandler(c *gin.Context) {
 // @Description provider the id of person to be blocked
 // @Tags chat
 // @Param BlockReq body BlockRequest true "id of person to be blocked"
-// @Param Authorization header string false "Send token if log-in, to check authority to send message" default(Bearer <Add access token here>)
+// @Param Authorization header string true "Send token if log-in, to check authority to block user" default(Bearer <Add access token here>)
 // @ID BlockHandler
 // @Accept  json
 // @Produce  json
@@ -110,8 +110,8 @@ func (h *Handler) BlockHandler(c *gin.Context) {
 // @Summary unblock user
 // @Description unblock user to allow message from them
 // @Tags chat
-// @Param UnBlockReq body BlockRequest true "id of person to be blocked"
-// @Param Authorization header string false "Send token if log-in, to check authority to send message" default(Bearer <Add access token here>)
+// @Param UnBlockReq body BlockRequest true "id of person to be unblocked"
+// @Param Authorization header string true "Send token if log-in, to check authority to unblock user" default(Bearer <Add access token here>)
 // @ID UnBlockHandler
 // @Accept  json
 // @Produce  json
